# embedded-c-project-template

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/project-version/: project-version.c  project-version.c.in  project-version.h
scripts/: build-Debug.sh  configure-Debug.sh  run.sh
source/: CMakeLists.txt  main.c
